# expense-planner

./: .gitignore  .scalafmt.conf  README.md  build.sbt  index.html  package.json  tyrianapp.js
rust-backend/: Cargo.toml
rust-backend/src/: main.rs
src/main/scala/myorg/: MyAwesomeWebapp.scala  Temp.scala
src/test/scala/myorg/: MyAwesomeWebappTests.scala
